--- a/content/posts/顺序统计.md
+++ b/content/posts/顺序统计.md
@@ -71,8 +71,8 @@ private int randomSelect(int left, int right) {
     int rInd = rand.nextInt(right - left + 1) + left;
     int index = partition(nums, rInd, left, right);
     if (index == k-1) return nums[index];   // 划分后，判断该随机元素是否命中
-    else if (index > k-1) return randomSelect(nums, left, index-1, k);   // index > k-1，去index左侧划分
-    else return randomSelect(nums, index+1, right, k);   // index < k-1，去index右侧划分
+    else if (index > k-1) return randomSelect(left, index-1, k);   // index > k-1，去index左侧划分
+    else return randomSelect(index+1, right, k);   // index < k-1，去index右侧划分
 }
 ```
 
@@ -80,7 +80,7 @@ private int randomSelect(int left, int right) {
 
 ```java
 public int getKElement(int k) {
-    return randomSelect(nums, 0, nums.length-1, k);
+    return randomSelect(0, nums.length-1);
 }
 ```
 
