--- a/content/posts/基于归并排序的逆序数统计.md
+++ b/content/posts/基于归并排序的逆序数统计.md
@@ -63,7 +63,7 @@ class Solution {
 
 回到本题，核心在于：在归并排序比较`leftNums[i]`与`rightNums[j]`的大小关系时，**如果正好左大于右，（即满足逆序数的定义），则可以直接确定这两个数之间的数都满足逆序数的定义**
 
-> 例如，`[2,4,6,7]`和`[1,3,5,6]`之间，比较`2`与`1`发现2>1，那么包括左侧数组包括`2`在内的剩余其他元素都与`1`形成逆序数关系，即`[2,1],[4,1],[6,1],[7,1]`
+> 例如，`[2,4,6,7]`和`[1,3,5,6]`之间，比较`2`与`1`发现2>1，那么左侧数组中包括`2`在内的剩余元素都与`1`形成逆序数关系，即`[2,1],[4,1],[6,1],[7,1]`
 >
 > 继续操作，将`1`放入临时数组，`j`指向`3`，2<3，将`2`放入临时数组，`i`指向`4`
 >
