自建计数服务，取消显示阅读时长
估算阅读时长的算法一点都不科学

--- a/content/posts/复杂网络复习.md
+++ b/content/posts/复杂网络复习.md
@@ -176,7 +176,7 @@ math = true
 
 - 度中心性：一个节点的邻居数目越多，影响力就越大
 
-  $\text{DC}(i)=\frac{k_i}{n-1}$，其中指节点的度，$n$指图中节点个数，$n-1$为一个节点所能拥有的最大度数
+  $\text{DC}(i)=\frac{k_i}{n-1}$，其中$i$指节点的度，$n$指图中节点个数，$n-1$为一个节点所能拥有的最大度数
 
 - 介数中心性：这个概念出现很多次了不解释，介数越大说明越重要
 
@@ -186,11 +186,11 @@ math = true
 
 ## 病毒传播模型
 
-所谓的SI模型即**感染（Infection）**状态与**易感染（Susceptible）**状态。有些还会引入**移除（Recovery）**状态，此时就称为SIR模型
+所谓的SI模型即**感染**（Infection）状态与**易感染**（Susceptible）状态。有些还会引入**移除**（Recovery）状态，此时就称为SIR模型
 
 在SI模型中，每一个易感染个体在单位时间内与感染个体发生关联且被传染的概率为β；每一个感染个体以定长速率γ再变为易感染个体，记$s(t)$为t时刻易感染个体所占比例，$i(t)$为t时刻感染个体所占比例，有：
 
-$$\begin{cases}\frac{ds\left(t\right)}{dt}=\gamma i\left(t\right)-\beta s\left(t\right)i\left(t\right)\\\frac{di\left(t\right)}{dt}=\beta s\left(t\right)i\left(t\right)-\gamma i\left(t\right)&\end{cases}$$
+$$\begin{cases}\frac{ds\left(t\right)}{dt}=\gamma i\left(t\right)-\beta s\left(t\right)i\left(t\right)\\\\\frac{di\left(t\right)}{dt}=\beta s\left(t\right)i\left(t\right)-\gamma i\left(t\right)&\end{cases}$$
 
 在这种情况下，感染个体数量的增长曲线呈S型上升，易感染个体曲线与之相对地下降
 
