修复多行公式不能正确显示的问题
博客文章更新

--- a/content/posts/复杂网络复习.md
+++ b/content/posts/复杂网络复习.md
@@ -33,7 +33,7 @@ math = true
 
   一个度为$k_i$的节点i的聚类系数$C_i$定义为$C_i=\frac{2E_i}{(k_i(k_i-1))}$，其中$E_i$是节点i的$k_i$个邻居节点之间实际存在的邻居对的数目
 
-  整个网络的集聚系数就是所有节点聚类系数的平均值，是一个0到1之间的值，越偏向0说明网络越松散，否则越集聚（每个节点都相连）
+  <u>整个网络的集聚系数就是所有节点聚类系数的平均值</u>，是一个0到1之间的值，越偏向0说明网络越松散，否则越集聚（每个节点都相连）
 
 - 同配性：考察度值相近的节点是否倾向于互相连接
 
@@ -77,16 +77,40 @@ math = true
 
 ## 评价网络是否同配
 
-同配是指网络中度数大的节点更倾向于与同样度数大的节点连接
+**同配**是指网络中度数大的节点更倾向于与同样度数大的节点连接
 
-1. 观察大度数节点是否倾向于与大度数节点连接
-2. 以杰卡德相似度——即同配系数来度量同配性
+1. **全统计描述**（Full Statistical Description）
+
+   * 使用 $e_{jk}$ 矩阵表示随机选择的边两端的节点分别具有度数 $j$ 和 $k$ 的概率
+
+   * 如果网络没有度相关性，$e_{jk}$ 应满足特定的公式：$e_{jk} = q_j q_k$，其中 $q_k$ 是具有度数 $k$ 的节点出现在边上的概率
+
+     > 也就是说，如果网络没有同配关系，那么理应有【左右两端节点概率】等于【左端节点概率】乘【右端节点概率】
+
+   * 偏离该预测的情况可以作为度相关性的标志，即同配 / 异配
+
+2. **度相关函数**（Degree Correlation Function）
+
+   * 表示为 $k_{\text{annd}}(k)$，即具有度数 $k$ 的节点的邻居的平均度数
+   * 这是一个度数依赖的函数，相较于全统计描述，它的参数更少且更易于解读
+
+3. **相关系数**（Correlation Coefficient）
+
+   * 提出者为 M. E. J. Newman，用以量化网络的度相关性。其公式是：
+
+     $$
+     r = \frac{\langle jk \rangle - \langle j \rangle \langle k \rangle}{\text{normalization factor}}
+     $$
+
+   * $r > 0$ 表示网络是同配的（assortative），即高度节点倾向于连接其他高度节点；$r < 0$ 表示网络是异配的（disassortative），即高度节点倾向于连接低度节点
+
+这些方法分别从不同的角度（概率分布、邻居关系和全局关联性）来分析网络的同配性和度相关性特点
 
 ## 加权网络
 
 加权网络就是边有权值的网络
 
-权值的定义很广泛，包括**相异权**、**相似权**、**相关物理量**、**相互作用的属性**等等
+权值的定义很广泛，包括<u>相异权</u>、<u>相似权</u>、<u>相关物理量</u>、<u>相互作用的属性</u>等等
 
 权统计量：
 
@@ -102,7 +126,9 @@ math = true
 
   - 点权相关性：节点的加权平均近邻度：
 
-    $$k_{nn,i}^w=\frac {1}{s_i} \sum_{j \in N_j}a_{ij}w_{ij}k_j$$
+    $$
+    k_{nn,i}^w=\frac {1}{s_i} \sum_{j \in N_j}a_{ij}w_{ij}k_j
+    $$
 
   - 权与度相关性：较大权重的边倾向于连接较大 / 较小度值的点
 
@@ -139,7 +165,7 @@ math = true
 
 基于团结构的社团检测
 
-团是一个无向图的完全子图，团中的每个节点都与团中的其他节点相连，节点之间的联系不可能比团更紧密。在基于团结构的社团检测中，*一个节点可以同时属于多个社团*
+团是一个无向图的完全子图，团中的每个节点都与团中的其他节点相连，节点之间的联系不可能比团更紧密。在基于团结构的社团检测中，<u>一个节点可以同时属于多个社团</u>
 
 如果一个团不被其他任一团所包含，则称该团为图的极大团
 
@@ -190,8 +216,9 @@ math = true
 
 在SI模型中，每一个易感染个体在单位时间内与感染个体发生关联且被传染的概率为β；每一个感染个体以定长速率γ再变为易感染个体，记$s(t)$为t时刻易感染个体所占比例，$i(t)$为t时刻感染个体所占比例，有：
 
-$$\begin{cases}\frac{ds\left(t\right)}{dt}=\gamma i\left(t\right)-\beta s\left(t\right)i\left(t\right)\\\\\frac{di\left(t\right)}{dt}=\beta s\left(t\right)i\left(t\right)-\gamma i\left(t\right)&\end{cases}$$
-
+$$
+\begin{cases}\frac{ds\left(t\right)}{dt}=\gamma i\left(t\right)-\beta s\left(t\right)i\left(t\right)\\\\\frac{di\left(t\right)}{dt}=\beta s\left(t\right)i\left(t\right)-\gamma i\left(t\right)&\end{cases}
+$$
 在这种情况下，感染个体数量的增长曲线呈S型上升，易感染个体曲线与之相对地下降
 
 ### 免疫策略
