--- a/content/posts/顺序统计.md
+++ b/content/posts/顺序统计.md
@@ -86,4 +86,4 @@ public int getKElement(int k) {
 
 通过测试输出，可以直观地看到这个算法的执行过程，通俗来讲就是一边进行快速排序，一边找到目标元素：
 
-{{< figure align=center src="../../img/partitionFindK.jpg" height=50% width=50% >}}
+{{< figure align=center src="https://img.fnicen.top/PicGo/partitionFindK.jpg" height=50% width=50% >}}
