评论区跟随当前明暗风格

--- a/content/posts/信息汇总（持续更新）.md
+++ b/content/posts/信息汇总（持续更新）.md
@@ -29,5 +29,12 @@ https://github.moeyy.xyz/https://raw.githubusercontent.com/FnICeN/iptv-api/refs/
 https://musicfreepluginshub.2020818.xyz/plugins.json
 ```
 
-> 计划未来自行部署到Github
+> 计划未来自行部署到Github，原仓库地址：https://github.com/xxnuo/MusicFreePluginsHub
 
+## 阅读APP书源
+
+```
+https://legado.aoaostar.com/sources/b778fe6b.json
+```
+
+> 原仓库地址：https://github.com/aoaostar/legado?tab=readme-ov-file
